# synap-rt

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pip-build-manual.yml  pip-build-release.yml
examples/: pipeline.py  pipeline_poll.py  simple.py
src/synapRT/: __init__.py  log_config.json
src/synapRT/constants/: __init__.py  _inference.py  _internal.py  _pipeline.py
src/synapRT/pipelines/: __init__.py  audio_classification.py  base.py  image_classification.py  object_detection.py  runners.py  utils.py
src/synapRT/utils/: __init__.py  datatypes.py  gst.py  input.py
