[project]
name = "synap-rt"
version = "0.0.2"
requires-python = ">=3.10"
authors = [{ "name" = "Sauryadeep Pal", "email" = "sauryadeep.pal@synaptics.com" }]
description = "SyNAP real-time AI Pipelines"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "opencv-python-headless",
    "numpy",
    "synap-python @ https://github.com/synaptics-synap/synap-python/releases/download/v0.0.2-preview/synap_python-0.0.2-cp310-cp310-linux_aarch64.whl"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"synapRT" = ["log_config.json"]