[project]
name = "synap-rt"
version = "0.0.2"
requires-python = ">=3.10"
authors = [{ "name" = "Sauryadeep Pal", "email" = "sauryadeep.pal@synaptics.com" }]
description = "SyNAP real-time AI Pipelines"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE*"]
dependencies = [
    "librosa",
    "opencv-python-headless",
    "numpy",
    "synap-python @ https://github.com/synaptics-synap/synap-python/releases/download/v0.0.4-preview/synap_python-0.0.4-cp310-cp310-manylinux_2_35_aarch64.whl"
]

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"synapRT" = ["log_config.json"]