[project]
name = "synap-rt"
version = "0.0.2"
requires-python = ">=3.10"
authors = [{ "name" = "Sauryadeep Pal", "email" = "sauryadeep.pal@synaptics.com" }]
description = "SyNAP real-time AI Pipelines"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE*"]
dependencies = [
    "opencv-python-headless",
    "numpy",
    "synap-python"
]

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"synapRT" = ["log_config.json"]